# Image-Processing

./: README.md  dlib_arm64.tar.bz2
CPlusPlus/: test_camera.cpp  test_opencv.cpp
Jupyter/: HOG.ipynb  Linear_Regression.ipynb
Machine-Learning/: K_Means_Clustering.ipynb  K_Means_Clustering_Simple_Applications.ipynb  Overview.ipynb  convert_jpeg_to_rgb.c
OpenCV/: CMakeLists.txt  create_csv.py  csv.ext  open_camera.cpp  open_image.cpp  open_video.cpp  pca.cpp
OpenCV/Projects/: CMakeLists.txt
OpenCV/Projects/Face_Detection/: CMakeLists.txt  face_detection_real_time.cpp  face_detection_using_camera.cpp  face_detection_using_image.cpp  face_detection_using_video.cpp  main.cpp
OpenCV/Projects/Measure_Size_Object/: CMakeLists.txt
OpenCV/Projects/face_detection_using_camera/: CMakeLists.txt  main.cpp
OpenCV/Projects/face_detection_using_video/: main.cpp
OpenCV/Trainning/: mat.cpp  open_camera.cpp
Python/: test_opencv.py  test_webcam.py
opencv/project/: CMakeLists.txt
opencv/project/decompanding/: CMakeLists.txt  main.cpp
opencv/project/face_detection_using_camera/: main.cpp
opencv/project/face_detection_using_image/: CMakeLists.txt  main.cpp
opencv/project/face_detection_using_video/: CMakeLists.txt  main.cpp
opencv/project/face_recognition/: CMakeLists.txt  create_csv.py  face_recognition_result.py  head_shot.py  main.cpp  test_csv.ext  train_csv.ext  train_model.py
opencv/project/head_shots/: CMakeLists.txt  main.cpp
opencv/project/mapping_coordinate_3d_2d/: CMakeLists.txt  main.cpp
opencv/project/measure_size_object/: CMakeLists.txt  main.cpp
opencv/project/test_face_recognition_model/: CMakeLists.txt  main.cpp
opencv/project/train_face_recognition_model/: CMakeLists.txt  main.cpp
opencv/project/train_face_recognition_model/src/: face_recognition.cpp  main.cpp
opencv/project/train_face_recognition_model/src/include/: face_recognition.h
opencv/project/train_face_recognition_model_arm64/: main_raspberrypi.cpp
opencv/project/train_face_regconition_model/: main.cpp
opencv/project/video_input_acquisition/: CMakeLists.txt  main.cpp
opencv/trainning/: CMakeLists.txt  color_correction.cpp  face_recognition.cpp  open_image.cpp  open_video.cpp  pca.cpp  threshold.cpp
